--- a/Calculator/Calculator/Components/MatrixComponent.razor.css
+++ b/Calculator/Calculator/Components/MatrixComponent.razor.css
@@ -1,4 +1,4 @@
-﻿.board {
+﻿.matrixWithBrackets {
     display: grid;
     grid-template-columns: repeat(var(--col-dimension), auto);
     grid-template-rows: fit-content();
@@ -6,6 +6,13 @@
     border-left: 2px solid black;
     border-right: 2px solid black;
     border-radius: 20px;
+}
+
+.matrixWithoutBrackets {
+    display: grid;
+    grid-template-columns: repeat(var(--col-dimension), auto);
+    grid-template-rows: fit-content();
+    width: fit-content;
 }
 
 
