--- a/Calculator/Calculator/Pages/Index.razor
+++ b/Calculator/Calculator/Pages/Index.razor
@@ -4,9 +4,5 @@
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
-<MatrixComponent Matrix="new int[3,3]{{1,2,3}, {4,5,6},{7,8,9}}"></MatrixComponent>
-<MatrixComponent Matrix="new int[2,2]{{1,2}, {4,5}}"></MatrixComponent>
-<MatrixComponent Matrix="new int[3,4]{{1,2,3,4}, {5,6,7,8},{9,10,11,12}}"></MatrixComponent>
-<MatrixComponent Matrix="new int[3,2]{{3,2}, {5,-1},{0,7}}"></MatrixComponent>
-<MatrixComponent Matrix="new int[5,2]" Edit="true"></MatrixComponent>
+<MatrixMultiplicationComponent></MatrixMultiplicationComponent>
 
