--- a/Calculator/Calculator/Pages/Index.razor
+++ b/Calculator/Calculator/Pages/Index.razor
@@ -1,8 +1,46 @@
 ﻿@page "/"
+@using Calculator.Classes;
 @using Calculator.Components
 
 <PageTitle>Index</PageTitle>
-
+<button @onclick="Multiply">Multiply</button>
 <h1>Hello, world!</h1>
-<MatrixMultiplicationComponent></MatrixMultiplicationComponent>
+<MatrixMultiplicationComponent MatrixA="matrixA" MatrixB="matrixB"></MatrixMultiplicationComponent>
 
+
+
+@code {
+
+	int[,] matrixA = new int[2, 3]
+	{
+		{4,2,0},
+		{-1,3,5},
+	};
+
+	int[,] matrixB = new int[3, 2]
+	{
+		{2,1},
+		{3,7},
+		{1,0}
+	};
+
+	public void Multiply()
+	{
+		Matrix a = new Matrix(matrixA);
+		Matrix b = new Matrix(matrixB);
+		Matrix c = a * b;
+		Matrix d = b * a;
+
+		a.Print();
+		Console.WriteLine();
+
+		b.Print();
+		Console.WriteLine();
+
+		c.Print();
+		Console.WriteLine();
+
+		d.Print();
+		Console.WriteLine();
+	}
+}
