add Accordion component add matrix addition accordion element

--- a/Calculator/Calculator/Components/MatrixComponent.razor
+++ b/Calculator/Calculator/Components/MatrixComponent.razor
@@ -1,4 +1,4 @@
-﻿<h3>(@Matrix.GetLength(0), @Matrix.GetLength(1))-Matrix</h3>
+﻿<!--<h3>(@Matrix.GetLength(0), @Matrix.GetLength(1))-Matrix</h3>-->
 <div class="@(BracketStyle ? "matrixWithBrackets" : "matrixWithoutBrackets")" style="--col-dimension:@Matrix.GetLength(1)">
 	@{
 		for (int i = 0; i < Matrix.GetLength(0); i++)
