--- a/Calculator/Calculator/Pages/MatrixPage.razor
+++ b/Calculator/Calculator/Pages/MatrixPage.razor
@@ -7,6 +7,10 @@
 <AccordionComponent Title="Multiplikation einer Matrix mit einem Skalar">
 	<MatrixComponent Matrix="new int[4,3]" Edit="true"></MatrixComponent>
 </AccordionComponent>
+<AccordionComponent Title="Multiplikation von Matrizen">
+	<MatrixComponent Matrix="new int[4,3]" Edit="true" EditDimension="true"></MatrixComponent>
+	<MatrixComponent Matrix="new int[4,3]" Edit="true" EditDimension="true"></MatrixComponent>
+</AccordionComponent>
 
 @code {
 
