--- a/Calculator/Calculator/Pages/MatrixPage.razor
+++ b/Calculator/Calculator/Pages/MatrixPage.razor
@@ -5,11 +5,9 @@
 	<MatrixAdditionComponent></MatrixAdditionComponent>
 </AccordionComponent>
 <AccordionComponent Title="Multiplikation einer Matrix mit einem Skalar">
-	<MatrixComponent Matrix="new int[4,3]" Edit="true"></MatrixComponent>
 </AccordionComponent>
 <AccordionComponent Title="Multiplikation von Matrizen">
-	<MatrixComponent Matrix="new int[4,3]" Edit="true" EditDimension="true"></MatrixComponent>
-	<MatrixComponent Matrix="new int[4,3]" Edit="true" EditDimension="true"></MatrixComponent>
+	<MatrixMultiplicationComponent></MatrixMultiplicationComponent>
 </AccordionComponent>
 
 @code {
