--- a/Calculator/Calculator/Components/MatrixComponent.razor.css
+++ b/Calculator/Calculator/Components/MatrixComponent.razor.css
@@ -19,8 +19,6 @@
     margin: 10px;
 }
 
-
-
 .element {
     width: 50px;
     height: 30px;
@@ -30,4 +28,28 @@
     font-size: 30px;
     cursor: pointer;
     place-self: center;
+}
+
+
+.matrix-dimension {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    height: max-content;
+}
+
+.child p {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.child {
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: table;
 }
