--- a/Calculator/Calculator/Components/MatrixMultiplicationComponent.razor
+++ b/Calculator/Calculator/Components/MatrixMultiplicationComponent.razor
@@ -1,50 +1,54 @@
 ﻿@using Calculator.Classes;
-<h3>MatrixMultiplicationComponent</h3>
-
-<div class="matrix-b">
-	<MatrixComponent Matrix="MatrixA" BracketStyle="false"></MatrixComponent>
-</div>
-<div>
-	<div class="matrix-a">
-		<MatrixComponent Matrix="MatrixB" BracketStyle="false"></MatrixComponent>
+<div class="matrix-multiplication">
+	<div class="child">
+		<MatrixComponent Matrix="matrixA" Edit="true" EditDimension="true"></MatrixComponent>
+	</div>
+	<div class="child">
+		<p>*</p>
+	</div>
+	<div class="child">
+		<MatrixComponent Matrix="matrixB" Edit="true" EditDimension="true"></MatrixComponent>
+	</div>
+	<div class="child">
+		<p>+</p>
 	</div>
 	@{
 		if (solved)
 		{
-			<div>
-					<MatrixComponent Matrix="MatrixC" BracketStyle="false"></MatrixComponent>
-			</div>		
+
+			<div class="matrixC">
+				<MatrixComponent Matrix="matrixC"></MatrixComponent>
+			</div>
 		}
 	}
 </div>
-<button @onclick="Multiply">Multiply</button>
+<button class="button-purple" @onclick="Multiply">Multiply</button>
+<button class="button-purple" @onclick="Reset">Reset</button>
 
 @code {
-	[Parameter]
-	public int[,] MatrixA { get; set; } = new int[3, 3];
-	[Parameter]
-	public int[,] MatrixB { get; set; } = new int[3, 3];
-
-	private int[,] MatrixC = new int[3, 3];
+	private Matrix matrixA = new Matrix(3, 3);
+	private Matrix matrixB = new Matrix(3, 3);
+	private Matrix matrixC = new Matrix(3, 3);
 
 	private bool solved = false;
 
-	public void Multiply()
+	private void Multiply()
 	{
-		Matrix a = new Matrix(MatrixA);
-		Matrix b = new Matrix(MatrixB);
-		Matrix c = a * b;
+		try
+		{
+			matrixC = matrixA * matrixB;
+			solved = true;
+		}
+		catch (WrongDimesnionException e)
+		{
+			Console.WriteLine(e.Message);
+		}
+	}
 
-		MatrixC = c.MatrixBoard;
-		solved = true;
-
-		a.Print();
-		Console.WriteLine();
-
-		b.Print();
-		Console.WriteLine();
-
-		c.Print();
-		Console.WriteLine();
+	private void Reset()
+	{
+		solved = false;
+		matrixA.Reset();
+		matrixB.Reset();
 	}
 }
