--- a/Calculator/Calculator/Components/MatrixMultiplicationComponent.razor.css
+++ b/Calculator/Calculator/Components/MatrixMultiplicationComponent.razor.css
@@ -1,13 +1,59 @@
-﻿.matrix-a {
-    border-right: 2px solid black;
-    border-top: 2px solid black;
-    width: fit-content;
+﻿.matrix-multiplication {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    height: max-content;
 }
 
-.matrix-b {
-    border-left: 2px solid black;
-    border-bottom: 2px solid black;
-    margin-left: 150px;
-    width: fit-content;
-    margin-bottom: -2px;
+.child p {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.child {
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: table;
+}
+
+.matrixC {
+    margin-top:30px;
+}
+
+﻿.button-purple {
+    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all .5s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 5px;
+}
+
+.button-purple:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
+
+.button-purple:hover {
+    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+    transition-duration: .1s;
 }
