--- a/Calculator/Calculator/Components/EquationWithMatrixComponent.razor.css
+++ b/Calculator/Calculator/Components/EquationWithMatrixComponent.razor.css
@@ -31,7 +31,30 @@
     transition-duration: .1s;
 }
 
-.matrix-multiplication {
+.matrixWithBrackets {
+    display: grid;
+    grid-template-columns: repeat(var(--col-dimension), auto);
+    grid-template-rows: fit-content();
+    width: fit-content;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-radius: 20px;
+    padding: 5px;
+    margin: 10px;
+}
+
+.element {
+    width: 50px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+    place-self: center;
+}
+
+.equation-with-matrix {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
@@ -54,6 +77,30 @@
     display: table;
 }
 
-.matrixC {
-    margin-top:30px;
+.result-left-border {
+    border-left: 2px solid black;
+    border-radius: 20px;
+    width:20px;
+    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.result-middle-border {
+    border: 1px solid black;
+    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.result-right-border {
+    border-right: 2px solid black;
+    border-radius: 20px;
+    width:20px;
+    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
 }
