--- a/Calculator/Calculator/Components/MatrixComponent.razor
+++ b/Calculator/Calculator/Components/MatrixComponent.razor
@@ -10,7 +10,7 @@
 			<div class="matrix-dimension">
 				<div class="child">
 					<button type="submit">Change Dimension</button>
-					<InputText id="dimension-input" @bind-Value="dimensionModel.Dimension" />
+					<InputText style="width:50px;" id="dimension-input" @bind-Value="dimensionModel.Dimension" />
 				</div>	
 			</div>
 		</EditForm>
