fix bugs in gauß jordan algorithm

--- a/Calculator/Calculator/Components/EquationWithMatrixComponent.razor
+++ b/Calculator/Calculator/Components/EquationWithMatrixComponent.razor
@@ -101,12 +101,19 @@ else
 
 	private void Solve()
 	{
-		//start with copy of input matrices
-		Array.Copy(matrixA.MatrixBoard, matrixAResult.MatrixBoard, matrixA.MatrixBoard.Length);
-		Array.Copy(vectorB.MatrixBoard, vectorBResult.MatrixBoard, vectorB.MatrixBoard.Length);
+		try
+		{
+			//start with copy of input matrices
+			Array.Copy(matrixA.MatrixBoard, matrixAResult.MatrixBoard, matrixA.MatrixBoard.Length);
+			Array.Copy(vectorB.MatrixBoard, vectorBResult.MatrixBoard, vectorB.MatrixBoard.Length);
 
-		matrixHelper.GaußJordan(matrixAResult, vectorBResult);
-		solved = true;
+			matrixHelper.GaußJordan(matrixAResult, vectorBResult);
+			solved = true;
+		}
+		catch (GausJordanException e)
+		{
+			Console.WriteLine(e.Message);
+		}
 	}
 
 	private void GenerateRandomInput()
