--- a/Calculator/Calculator/Pages/MatrixPage.razor
+++ b/Calculator/Calculator/Pages/MatrixPage.razor
@@ -5,13 +5,14 @@
 <AccordionComponent Title="Addition von Matrizen">
 	<MatrixAdditionComponent></MatrixAdditionComponent>
 </AccordionComponent>
-<AccordionComponent Title="Multiplikation einer Matrix mit einem Skalar">
-</AccordionComponent>
 <AccordionComponent Title="Multiplikation von Matrizen">
 	<MatrixMultiplicationComponent></MatrixMultiplicationComponent>
 </AccordionComponent>
 <AccordionComponent Title="Gauß-Jordan Algorithmus (Ax = b)">
 	<EquationWithMatrixComponent></EquationWithMatrixComponent>
+</AccordionComponent>
+<AccordionComponent Title="Inverse Matrix">
+	<EquationWithMatrixComponent calculationType="Classes.Enums.CalculationTypes.Inverse"></EquationWithMatrixComponent>
 </AccordionComponent>
 
 @code {
