add Vector Page add Vector Methods add Vector Components

--- a/Calculator/Calculator/Pages/VectorPage.razor
+++ b/Calculator/Calculator/Pages/VectorPage.razor
@@ -2,6 +2,16 @@
 @using Calculator.Classes;
 @using Calculator.Components
 
+<AccordionComponent Title="Länge eines Vektors">
+</AccordionComponent>
+<AccordionComponent Title="Abstand zweier Punkte">
+</AccordionComponent>
+<AccordionComponent Title="Einheitsvektor">
+</AccordionComponent>
+<AccordionComponent Title="Skalar Produkt">
+</AccordionComponent>
+<AccordionComponent Title="Kreuz Produkt">
+</AccordionComponent>
 @code {
 
 }
