--- a/Calculator/Calculator/Pages/VectorPage.razor
+++ b/Calculator/Calculator/Pages/VectorPage.razor
@@ -3,14 +3,15 @@
 @using Calculator.Components
 
 <AccordionComponent Title="Länge eines Vektors">
+	<VectorLengthComponent></VectorLengthComponent>
 </AccordionComponent>
 <AccordionComponent Title="Abstand zweier Punkte">
 </AccordionComponent>
-<AccordionComponent Title="Einheitsvektor">
-</AccordionComponent>
 <AccordionComponent Title="Skalar Produkt">
+	<DotProductComponent></DotProductComponent>
 </AccordionComponent>
 <AccordionComponent Title="Kreuz Produkt">
+	<CrossProductComponent></CrossProductComponent>
 </AccordionComponent>
 @code {
 
