--- a/Calculator/Calculator/Pages/VectorPage.razor
+++ b/Calculator/Calculator/Pages/VectorPage.razor
@@ -6,12 +6,19 @@
 	<VectorLengthComponent></VectorLengthComponent>
 </AccordionComponent>
 <AccordionComponent Title="Abstand zweier Punkte">
+	<DistanceBetweenPointsComponent></DistanceBetweenPointsComponent>
 </AccordionComponent>
 <AccordionComponent Title="Skalar Produkt">
 	<DotProductComponent></DotProductComponent>
 </AccordionComponent>
 <AccordionComponent Title="Kreuz Produkt">
 	<CrossProductComponent></CrossProductComponent>
+</AccordionComponent>
+<AccordionComponent Title="Lineare Unabhängigkeit">
+	<LinearDependeceVectorComponent></LinearDependeceVectorComponent>
+</AccordionComponent>
+<AccordionComponent Title="Linearkombination">
+	<LinearCombinationComponent></LinearCombinationComponent>
 </AccordionComponent>
 @code {
 
