--- a/Calculator/Calculator/Shared/NavMenu.razor
+++ b/Calculator/Calculator/Shared/NavMenu.razor
@@ -18,6 +18,11 @@
             <NavLink class="nav-link" href="/Vector" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Vector
             </NavLink>
+        </div>        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/InformationTheory" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Information Theory
+            </NavLink>
         </div>
     </nav>
 </div>
