add entropy component

--- a/Calculator/Calculator/Pages/InformationTheoryPage.razor
+++ b/Calculator/Calculator/Pages/InformationTheoryPage.razor
@@ -8,6 +8,10 @@
 <AccordionComponent Title="MSE">
 	<MSEComponent></MSEComponent>
 </AccordionComponent>
+<AccordionComponent Title="Entropy">
+	<EntropyComponent></EntropyComponent>
+</AccordionComponent>
+
 
 @code {
 
