--- a/Calculator/Calculator/Pages/InformationTheoryPage.razor
+++ b/Calculator/Calculator/Pages/InformationTheoryPage.razor
@@ -11,6 +11,9 @@
 <AccordionComponent Title="Entropy">
 	<EntropyComponent></EntropyComponent>
 </AccordionComponent>
+<AccordionComponent Title="/Shannon-Fano">
+	<ShannonFanoComponent></ShannonFanoComponent>
+</AccordionComponent>
 
 
 @code {
