--- a/Calculator/Calculator/Pages/InformationTheoryPage.razor
+++ b/Calculator/Calculator/Pages/InformationTheoryPage.razor
@@ -11,7 +11,7 @@
 <AccordionComponent Title="Entropy">
 	<EntropyComponent></EntropyComponent>
 </AccordionComponent>
-<AccordionComponent Title="/Shannon-Fano">
+<AccordionComponent Title="Shannon-Fano">
 	<ShannonFanoComponent></ShannonFanoComponent>
 </AccordionComponent>
 
