--- a/Calculator/Calculator/Components/EncodingComponent.razor.css
+++ b/Calculator/Calculator/Components/EncodingComponent.razor.css
@@ -31,7 +31,7 @@
     transition-duration: .1s;
 }
 
-.shannon-fano {
+.encoding {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
