--- a/Calculator/Calculator/Pages/InformationTheoryPage.razor
+++ b/Calculator/Calculator/Pages/InformationTheoryPage.razor
@@ -12,7 +12,10 @@
 	<EntropyComponent></EntropyComponent>
 </AccordionComponent>
 <AccordionComponent Title="Shannon-Fano">
-	<ShannonFanoComponent></ShannonFanoComponent>
+	<EncodingComponent></EncodingComponent>
+</AccordionComponent>
+<AccordionComponent Title="Huffman-Kodierung">
+	<EncodingComponent UseShannonFano="false"></EncodingComponent>
 </AccordionComponent>
 
 
